@@ -7,8 +7,8 @@
 // `license' for details on this and other legal matters.
 //
 
-#ifndef __QUEUEING_JOIN_H__
-#define __QUEUEING_JOIN_H__
+#ifndef __QUEUEING_JOIN_H
+#define __QUEUEING_JOIN_H
 
 #include <list>
 #include "QueueingDefs.h"
@@ -19,7 +19,7 @@ namespace queueing {
 /**
  * Merges sub-jobs generated by Split.
  */
-class Join : public cSimpleModule
+class QUEUEING_API Join : public cSimpleModule
 {
     protected:
         std::list<Job*> jobsHeld;
